--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,80 @@
 body {
     background: #333;
-    color: #fff;
+    color: #000;
     font-family: Calibri, Arial, sans-serif;
     font-size: 150%;
     margin: 0; /* keep this */
 }
 
+#cougar {
+  background: #FFD5AE ;
+  width: 800px;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  margin: 50px auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#tiger {
+  background: #379CB2;
+  width: 800px;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  margin: 50px auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#lion {
+  background: #B26219;
+  width: 800px;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  margin: 50px auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header {
+  width:1250px
+}
+
+h2, section > p {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+    }
+
+article {
+  width: 500px;
+  padding: 20px 40px;
+  background: #fff;
+}
+
+footer {
+  text-align: center;
+  padding: 20px 40px;
+    }
+
+h1 {
+  margin: 0;
+}
+
+
 /* ----- suggested colors -----
    B26219 cinnamon
-   FFD5AE pale peach 
+   FFD5AE pale peach
    FFBD82 peach
    379CB2 medium blue
    82E8FF light blue
-   
+
    ----- neutral colors -----
    000 black
    333 charcoal
@@ -25,5 +87,22 @@ body {
 
 /* --- links and nav --- */
 
+.clearfix {
+  clear: both;
+}
+
 a { color: #379CB2; }
 a:hover { color: #82E8FF; }
+
+nav {
+  float: right;
+  overflow: hidden;
+}
+nav ul {
+  list-style: none;
+  margin-top: 0;
+}
+nav li {
+  float: left;
+  margin-left: 20px;
+}
